--- a/styles.html
+++ b/styles.html
@@ -142,7 +142,7 @@
         </ul> <!-- end home-social -->
 
         <a href="#styles" class="home-scroll smoothscroll">
-            <span class="home-scroll__text">Scroll Down</span>
+            <span class="home-scroll__text">Rolar para Baixo</span>
             <span class="home-scroll__icon"></span>
         </a> <!-- end home-scroll -->
 
