--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </ul> <!-- end home-sidelinks -->
 
         <a href="#about" class="home-scroll smoothscroll">
-            <span class="home-scroll__text">Scroll Down</span>
+            <span class="home-scroll__text">Rolar para Baixo</span>
             <span class="home-scroll__icon"></span>
         </a> <!-- end home-scroll -->
     </section> <!-- end s-home -->
@@ -430,7 +430,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row" style="margin-top: 50px;">
+            <!-- <div class="row" style="margin-top: 50px;">
                 <div class="col-eight tab-full contact-secondary">
                     <div class="contact-subscribe">
                         <form action="https://vwmidia.com.br" id="mc-form" class="group mc-form" novalidate="true">
@@ -438,7 +438,7 @@
                         </form>
                     </div>
                 </div>
-            </div> <!-- end row -->        
+            </div> end row         -->
 
             <!-- <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--ui-design">
@@ -511,12 +511,23 @@
                 <p class="contact-email">Além disso, você terá acesso ao grupo <b>Hyper Dúvidas</b>, onde poderá por 30 dias, tirar suas dúvidas diretamente com a gente e com sua turma, aumentando ainda mais o seu aprendizado e o seu sucesso.</p>
 
                 <p class="contact-email">Bônus 3 - Bônus supresa, divulgado somente ao final do treinamento para quem participar.</p>
+                <p class="contact-email"></p>
+
+                <h1 class="display-1 display-1--light">INVESTIMENTO</h1>
+                <p class="contact-email">
+                    Esta é uma turma ÚNICA e com vagas LIMITADAS! <br> (sem gatilho de escassez aqui). Será uma turma pequena para prestarmos um atendimento PERSONALIZADO.
+                    <br>Pegaremos na SUA MÃO e te guiaremos até o sucesso nos negócios.</p>
+
+                <p class="contact-email">Você se tornará aluno da Formação Empreendedora HyperX por apenas:</p>
+                <p class="contact-email">12x R$ 180,42</p>
+                <p style="margin-top: -30px;">OU R$ 1.797,00 à vista.</p>
+                <p style="margin-top: -30px;">* Pagamentos via PIX tem 10% de Desconto. Fale com a gente.</p>
             </div>
         </div> <!-- end section-header -->
         <div class="row">
             <div class="col-five tab-full contact-secondary">
                 <div class="contact-subscribe">
-                    <form action="https://vwmidia.com.br" id="mc-form" class="group mc-form" novalidate="true">
+                    <form action="https://pay.kiwify.com.br/S6dJT0s" class="group mc-form">
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </form>
                 </div>
@@ -548,7 +559,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos
         </div>
 
         <div class="cl-go-top">
-            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+            <a class="smoothscroll" title="Voltar ao Topo" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
         </div>
 
     </section> <!-- end s-contact -->
