--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     Fale com a gente no WhatsApp<br>
                 </p>
                 <div class="contact-subscribe">
-                    <form action="https://api.whatsapp.com/send?phone=5551991337183&text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida.">
+                    <form action="https://wa.me/5551991337183?text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida">
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Tenho uma dúvida">
                     </form>
                 </div>
