--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 <h3 class="subhead subhead--light">DÚVIDAS?</h3>
 
                 <p class="contact-address">
-                    Fale com a gente no WhatsApp<br>
+                    Fale com a nossa Agência VWMídia pelo WhatsApp<br>
                 </p>
                 <div class="contact-subscribe">
                     <form action="https://wa.me/5551991337183?text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida">
