--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Formação HyperX</title>
+    <title>Formação HyperX Online</title>
     <meta name="description" content="Formação Empreendedora HyperX">
     <meta name="author" content="Everson Vargas">
 
@@ -49,19 +49,16 @@
 
     <!-- header
     ================================================== -->
-    <header class="s-header">
-
+    <!-- <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <!-- <img src="images/logo.svg" alt="Homepage"> -->
                 <p style="color: white;">
                     Dias 27, 28 e 29 de OUTUBRO <br>
                     das 09:00 às 17:00 - em Novo Hamburgo
                 </p>
             </a>
-        </div> <!-- end header-logo -->
-    </header> <!-- end s-header -->
-
+        </div> 
+    </header>  -->
 
     <!-- home
     ================================================== -->
@@ -70,21 +67,24 @@
         <div class="shadow-overlay"></div>
 
         <div class="home-content">
+            <div class="row home-content__main" style="padding-top: 0px;">
+                <h2 class="gold">CHEGOU A SUA HORA!</h2>
+                <h2 class="gold">Desvendamos o  DNA do sucesso do <u>Vale do Silício!</u></h2>
+                <h4 class="gold" style="margin-top: 0px; margin-bottom: 80px;">E se Você soubesse Gerenciar seu negócio como no <u><i>Vale do Silício</i></u> e <u><i>atrair consistentemente seus Clientes Ideais</i></u>... Surpreendê-los com uma <u><i>entrega de excelência</i></u>... e fazê-los <u><i>comprar novamente</i></u> de você... Isso ajudaria você a alavancar seu negócio?</h4>
 
-            <div class="row home-content__main">
                 <h1>
                 Formação Empreendedora <br>
-                HyperX
+                HyperX - Online
                 </h1>
 
                 <p>
-                    Treinamento presencial de 3 DIAS onde você sairá com 
-                    <br> um <b>Modelo de Negócio Enxuto</b>, 
-                    <br> um <b>Funil de Vendas Completo</b> e 
-                    <br> uma <b>Estratégia de Marketing Ágil</b> montada para o seu negócio.
+                    O Treinamento Definitivo para você criar 
+                    <br> seu <b>Modelo de Negócio Enxuto</b>, 
+                    <br> seu <b>Funil de Vendas Completo</b> e 
+                    <br> sua <b>Estratégia de Marketing Ágil</b> específica para o seu negócio.
                 </p>
                 <p style="color: lightblue;">
-                    É o treinamento DEFINITIVO para o empreendedor moderno da era Digital.
+                    É o treinamento DEFINITIVO para o empreendedor moderno que deseja ter um negócio de sucesso no modelo Vale do Silício.
                 </p>
             </div> <!-- end home-content__main -->
 
@@ -108,8 +108,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">O que é a Formação HyperX?</h3>
-                <h1 class="display-1">É um treinamento imersivo COMPLETO onde você aprenderá os 3 principais pilares de qualquer negócio lucrativo:</h1>
+                <h3 class="subhead">O que é a Formação HyperX Online?</h3>
+                <h1 class="display-1">É um treinamento COMPLETO onde você aprenderá os 3 principais pilares de um negócio lucrativo no modelo Vale do Silício:</h1>
                 <h3 style="margin-top: -50px;">
                     <br>- Modelo de Negócios 
                     <br>- Estratégia de Marketing
@@ -126,11 +126,12 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                    Mas aqui há uma grande diferença, nós iremos te ensinar: <br>
-                    <b>1. </b>Modelo de Negócios Enxuto (Linear e Escalável) <br>
-                    <b>2. </b>Marketing Ágil (Growth Marketing) <br>
-                    <b>3. </b>Vendas 3X (Como acelerar suas vendas em 2 meses) <br>
+                    Mas aqui está o nosso diferencial! Você aprenderá a: <br>
+                    <b>1. </b>Criar dois Modelos de Negócio <u><i>Enxuto (Linear e Escalável)</i></u> <br>
+                    <b>2. </b>Criar uma estratégia de Marketing <u><i>Ágil (Growth Marketing)</i></u> <br>
+                    <b>3. </b>Criar um funil de Vendas 3X <u><i>(Como acelerar suas vendas em 2 meses)</i></u> <br><br>
 
+                    Tudo isso utilizando as técnicas e ferramentas <u>mais poderosas do Vale do Silício</u> na California. <br>
                     <!-- <p>
                         E o principal de tudo:
                         Vamos te ensinar a PENSAR como um EMPREENDEDOR de verdade e a ter a VISÃO necessária para tomar as melhores decisões para seu negócio.
@@ -209,7 +210,7 @@
                     O objetivo principal de qualquer negócio é resolver um problema do mercado e obter lucro vendendo a solução. Empresas altamente lucrativas transformam este processo em um ciclo automatizado de vendas.
                 </p>
                 <p class="lead">
-                    Esta é a Missão da Formação HyperX, te ensinar quais são e como gerenciar de forma ágil as 4 etapas de um negócio lucrativo.
+                    Esta é a Missão da Formação HyperX Online, te ensinar quais são e como gerenciar de forma ágil as 4 etapas de um negócio lucrativo.
                 </p>
                 <!-- <p class="lead">
                     Para fazer isso, você precisa estruturar seu negócio da forma correta, definindo e organizando as 4 Etapas de um Negócio de Sucesso.
@@ -311,7 +312,7 @@
         <div class="row masonry-wrap">
             <div class="masonry">
 
-                <div class="masonry__brick">
+                <!-- <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
@@ -319,8 +320,8 @@
                                 <img src="images/premio-1.jpg">
                             </a>
                         </div>
-                    </div> <!-- end item-folio -->
-                </div> <!-- end masonry__brick -->
+                    </div>
+                </div> -->
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -367,6 +368,17 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/premio-6.png" class="thumb-link" title="" data-size="1050x700">
+                                <img src="images/premio-6.png">
+                            </a>
+                        </div>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
             </div> <!-- end masonry -->
         </div> <!-- end masonry-wrap -->
 
@@ -396,7 +408,7 @@
                 <div class="col-full testimonials__slider">
                     <div class="testimonials__slide">
                         <img src="images/avatars/profileScheron.jpeg" alt="Author image" class="testimonials__avatar">
-                        <p>Com vasta experiência em gestão, empreendedorismo e marketing, iniciou sua carreira emprendedora aos 16 anos. Em 2012, fundou o projeto Scheron Pipoca e não parou mais emplacando um projeto atrás do outro, todos destinados a auxiliar empreendedoras a superar desafios. Atualmente, ela é mentora, palestrante é sócia na Agência VWMídia, no evento Enjoy Beauty e Fundadora da Franquia Mulheres com Conteúdo, grupo destinado ao fomento do emprendedorismo feminino na região Sul. Scheron já impactou mais 1 MILHÃO de pessoas com seus projetos e com a Formação HyperX, deseja te ensinar os segredos de um negócio de Impacto.</p>
+                        <p>Com vasta experiência em gestão, empreendedorismo e marketing, iniciou sua carreira emprendedora aos 16 anos. Em 2012, fundou o projeto Scheron Pipoca e não parou mais emplacando um projeto atrás do outro, todos destinados a auxiliar empreendedoras a superar desafios. Atualmente, ela é mentora, palestrante é sócia na Agência VWMídia, no evento Enjoy Beauty e Fundadora da Franquia Mulheres com Conteúdo, grupo destinado ao fomento do emprendedorismo feminino na região Sul. Scheron já impactou mais de 5 MILHÕES de pessoas com seus projetos e com a Formação HyperX, deseja te ensinar os segredos de um negócio de Impacto.</p>
                         <div class="testimonials__author">
                             Scheron Wiatroski (Pipoca)
                             <span>Empreendedora e Mentora de Empreendedores</span>
@@ -421,7 +433,7 @@
         <div class="row">
             <div class="col-full">
                 <p class="lead">
-                    Se você fatura <b>MENOS de R$ 70 MIL por mês</b>, está formação <b>É PARA VOCÊ!</b>
+                    Se você fatura <b>MENOS de R$ 80 MIL por mês</b>, está formação <b>É PARA VOCÊ!</b>
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -430,8 +442,8 @@
 
             <div class="col-block service-item">
                 <div class="service-text">
-                    <h3 class="h4">Por que 70 MIL por mês?</h3>
-                    <p>Se você possui um negócio que fatura mais de 70 mil por mês, provavelmente você já passou pelas fases 1 e 2 de um negócio lucrativo. No seu caso, você necessita de estratégias mais elaboradas de Marketing, Vendas e Escala. Se este for o seu caso, entre em contato que temos uma mentoria de Escala específica para você.
+                    <h3 class="h4">Por que 80 MIL por mês?</h3>
+                    <p>Se você possui um negócio que fatura mais de 80 mil por mês, provavelmente você já passou pelas fases 1 e 2 de um negócio lucrativo. No seu caso, você necessita de estratégias mais elaboradas de Marketing, Vendas e Escala. Se este for o seu caso, entre em contato que temos uma mentoria de Escala específica para você.
                     </p>
                 </div>
             </div>
@@ -495,7 +507,7 @@
                 <h5>Ferramentas e Técnicas</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">24</div>
+                <div class="stats__count">50</div>
                 <h5>Horas de Treinamento</h5>
             </div>
             <div class="col-block stats__col">
@@ -519,47 +531,89 @@
         <div class="row section-header">
             <div class="col-full">
                 <h3 class="subhead subhead--light">QUERO ME INSCREVER</h3>
-                <h1 class="display-1 display-1--light">Temos algo INOVADOR para você!</h1>
-                <p class="contact-email">Se inscrevendo <b>agora</b>, você terá acesso às aulas GRAVADAS desta formação. Isso mesmo! Somos a <b>PRIMEIRA FORMAÇÃO presencial</b>  que te dá acesso às aulas gravadas para que você possa, durante 1 ano inteiro, rever as aulas e recaptular todo o material e conhecimento adquirido.</p>
+                <h1 class="display-1 display-1--light">Temos algumas SURPRESAS para você!</h1>
+                <p class="contact-email">Se inscrevendo <b>agora</b>, você terá acesso à sessões AO VIVO conosco para tirar suas dúvidas específicas do seu Negócio. Isso mesmo! Faremos <b>aulas online AO VIVO</b> durante 6 meses para que você possa validar conosco toda a estratégia montada para o seu negócio. ISSO MUDA O JOGO!</p>
 
-                <p class="contact-email">Além disso, você terá acesso ao grupo <b>Hyper Dúvidas</b>, onde poderá por 30 dias, tirar suas dúvidas diretamente com a gente e com sua turma, aumentando ainda mais o seu aprendizado e o seu sucesso.</p>
+                <p class="contact-email">Além disso, você terá acesso ao grupo <b>Hyper Dúvidas</b>, onde poderá, tirar suas dúvidas diretamente com a gente e com sua turma, aumentando ainda mais o seu aprendizado e o seu sucesso.</p>
 
-                <p class="contact-email">Bônus 3 - Bônus supresa, divulgado somente ao final do treinamento para quem participar.</p>
+                <p class="contact-email">Bônus 3 - Super Bônus supresa, divulgado somente para quem concluir todas as aulas.</p>
                 <p class="contact-email"></p>
 
                 <h1 class="display-1 display-1--light">INVESTIMENTO</h1>
                 <p class="contact-email">
-                    Esta é uma turma ÚNICA e com vagas LIMITADAS! <br> (sem gatilho de escassez aqui). Será uma turma pequena para prestarmos um atendimento PERSONALIZADO.
+                    Esta é uma OFERTA com vagas LIMITADAS! <br> (sem gatilho de escassez aqui). Será uma turma limitada para que possamos prestar uma formação PERSONALIZADA para você.
                     <br>Pegaremos na SUA MÃO e te guiaremos até o sucesso nos negócios.</p>
 
-                <p class="contact-email">Você se tornará aluno da Formação Empreendedora HyperX por apenas:</p>
-                <p class="contact-email">12x R$ 180,42</p>
-                <p style="margin-top: -30px;">OU R$ 1.797,00 à vista.</p>
-                <p style="margin-top: -30px;">* Pagamentos via PIX tem 10% de Desconto. Fale com a gente.</p>
+                <p class="contact-email">Você se tornará aluno da Formação Empreendedora HyperX Online por apenas:</p>
+                <p class="contact-email">12x R$ 130,00</p>
+                <p style="margin-top: -30px;">OU R$ 1.297,00 à vista.</p>
+                <!-- <p style="margin-top: -30px;">* Pagamentos via PIX tem 10% de Desconto. Fale com a gente.</p> -->
             </div>
         </div> <!-- end section-header -->
-        <div class="row">
+        <div class="row" style="margin-bottom: 40px;">
             <div class="col-five tab-full contact-secondary">
                 <div class="contact-subscribe">
-                    <form action="https://pay.kiwify.com.br/S6dJT0s" class="group mc-form">
+                    <!-- <form action="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
-                    </form>
+                    </form> -->
+                    <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
+                        <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
+                    </a>
                 </div>
             </div>    
         </div>
 
         <div class="row">
-
             <div class="col-five tab-full contact-secondary">
+                <h3 class="subhead subhead--light">AINDA ESTÁ EM DÚVIDA?</h3>
+                Nos conheça um pouco mais nas Redes Sociais <br>
+                <ul class="header-nav__social">
+                    <li>
+                        <a style="color: white;" target="_blank" href="https://www.instagram.com/eversonvargasoficial/"><i class="fab fa-instagram gold"></i> Everson Vargas (O Nerd)</a>
+                    </li>
+                </ul>
+                <ul style="color: white;" class="header-nav__social">
+                    <li>
+                        <a style="color: white;" target="_blank" href="https://www.instagram.com/scheronpipoca/"><i class="fab fa-instagram gold"></i> Scheron D. Wiatroski (Pipoca)</a>
+                    </li>
+                </ul>
+            </div> <!-- end contact-secondary -->
+        </div> <!-- end row -->
+
+        <!-- CÓDIGO PARA ADICIONAR O CHECKOUT DA EDUZZ DIRETO NA PÁGINA -->
+        <!-- <div id="pagamento" class="row">
+            <div id="elements"></div>
+            <script src="https://cdn.eduzzcdn.com/sun/bridge/bridge.js"></script>
+            <script>
+              (function () {
+                const load = function () {
+                    window.Eduzz.Checkout.init({
+                      contentId: 2314629,
+                      target: "elements",
+                      errorCover: true
+                    });
+                }
+                if (document.readyState === 'complete') {
+                    load();
+                    return;
+                }
+                window.addEventListener('load', load);
+              })();
+            </script>        
+        </div> -->
+
+        <div class="row">
+            <div class="col-five tab-full contact-secondary">
+                <br>
                 <h3 class="subhead subhead--light">DÚVIDAS?</h3>
 
                 <p class="contact-address">
                     Fale com a nossa Agência VWMídia pelo WhatsApp<br>
                 </p>
                 <div class="contact-subscribe">
-                    <form action="https://wa.me/5551991337183?text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida">
+                    <a target="_blank" href="https://wa.me/5551991337183?text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida.">
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Tenho uma dúvida">
-                    </form>
+                    </a>
                 </div>
             </div> <!-- end contact-secondary -->
         </div> <!-- end row -->
@@ -567,8 +621,9 @@
         <div class="row">
             <div class="col-full cl-copyright">
                 <span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados | Desenvolvido por <i class="fa fa-heart" aria-hidden="true"></i> <a>VWMídia Agência de Marketing</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></span> 
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos os direitos reservados | Desenvolvido por <i class="fa fa-heart" aria-hidden="true"></i> <a>VWMídia Agência de Marketing</a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </span> 
             </div>
         </div>
 
