--- a/index.html
+++ b/index.html
@@ -102,6 +102,83 @@
         </a> <!-- end home-scroll -->
     </section> <!-- end s-home -->
 
+
+    <!-- Depoimentos
+    ================================================== -->
+    <section id='services' class="s-services light-gray" style="margin-top: -80px;">
+
+        <div class="row section-header">
+            <div class="col-full">
+                <h3 class="subhead">Veja o impacto que causamos na nossa última turma?</h3>
+                <h1 class="display-1">As 4 etapas de um Negócio de Sucesso.</h1>
+            </div>
+        </div> <!-- end section-header -->
+
+        <div class="row">
+            <div class="col-full">
+                <p class="lead">
+                    O objetivo principal de qualquer negócio é resolver um problema do mercado e obter lucro vendendo a solução. Empresas altamente lucrativas transformam este processo em um ciclo automatizado de vendas.
+                </p>
+                <p class="lead">
+                    Esta é a Missão da Formação HyperX Online, te ensinar quais são e como gerenciar de forma ágil as 4 etapas de um negócio lucrativo.
+                </p>
+                <!-- <p class="lead">
+                    Para fazer isso, você precisa estruturar seu negócio da forma correta, definindo e organizando as 4 Etapas de um Negócio de Sucesso.
+                </p> -->
+            </div>
+        </div> <!-- end about-desc -->
+
+        <div class="row services-list block-1-2 block-m-1-2 block-tab-full">
+
+            <div class="col-block service-item ">
+                <div class="service-icon service-icon--brand-identity">
+                    <i class="icon-tv"></i>
+                </div>
+                <div class="service-text">
+                    <h3 class="h4">Descoberta de Clientes</h3>
+                    <p>O primeiro passo para qualquer negócio é saber quem é e onde está o seu cliente ideal. Através de uma ferramenta de gestão Ágil, você irá identificar e explorar os potenciais clientes para o seu negócio.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item">
+                <div class="service-icon  service-icon--illustration">
+                    <i class="icon-group"></i>
+                </div>
+                <div class="service-text">
+                    <h3 class="h4">Validação do Negócio</h3>
+                    <p>Após identificados os potenciais compradores, é hora de vender. Isso mesmo. A Venda é o objetivo principal de qualquer modelo de negócio lucrativo e é isso que iremos te ensinar a fazer desde o início. Vender e aumentar seu ROI.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item">
+                <div class="service-icon  service-icon--web-design">
+                    <i class="icon-earth"></i>
+                </div>  
+                <div class="service-text">
+                    <h3 class="h4">Geração de Demanda</h3>
+                    <p>
+                        Esta é a etapa que causa o MAIOR DESPERDÍCIO de tempo e dinheiro dos empreendedores menos experientes. Negócios que não estão tendo lucro, provavelmente começaram sua jornada por esta etapa e da forma errada. <b>Nós te ajudamos a corrigir este erro</b>.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-block service-item">
+                <div class="service-icon service-icon--product-strategy">
+                    <i class="icon-cube"></i>
+                </div>
+                <div class="service-text">
+                    <h3 class="h4">Otimização e Escala</h3>
+                    <p>
+                        Esta é a etapa final, onde você terá em mãos todas as ferramentas e processos validados para escalar o seu negócio de forma lucrativa e sustentável. 
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <!-- about
     ================================================== -->
     <section id='about' class="s-about">
@@ -544,8 +621,9 @@
                     Esta é uma OFERTA com vagas LIMITADAS! <br> (sem gatilho de escassez aqui). Será uma turma limitada para que possamos prestar uma formação PERSONALIZADA para você.
                     <br>Pegaremos na SUA MÃO e te guiaremos até o sucesso nos negócios.</p>
 
-                <p class="contact-email">Você se tornará aluno da Formação Empreendedora HyperX Online por apenas:</p>
-                <p class="contact-email">12x R$ 130,00</p>
+                <p class="contact-email">Se inscrevendo AGORA, você terá um <b>DESCONTO DE </br> R$ 2.700,00</b></p>
+                <p class="contact-email">DE <b style="text-decoration: line-through;">R$ 3.997,00</b> POR APENAS 12X de</p>
+                <p class="contact-email"><b>R$ 130,00</b></p>
                 <p style="margin-top: -30px;">OU R$ 1.297,00 à vista.</p>
                 <!-- <p style="margin-top: -30px;">* Pagamentos via PIX tem 10% de Desconto. Fale com a gente.</p> -->
             </div>
