--- a/index.html
+++ b/index.html
@@ -109,74 +109,61 @@
 
         <div class="row section-header">
             <div class="col-full">
-                <h3 class="subhead">Veja o impacto que causamos na nossa última turma?</h3>
-                <h1 class="display-1">As 4 etapas de um Negócio de Sucesso.</h1>
+                <h3 class="subhead">Veja a transformação que causamos na nossa última turma?</h3>
+                <h1 class="display-1">Não confie <u>apenas</u> nas minhas palavras.</br> Veja o que nossos alunos dizem.</h1>
             </div>
         </div> <!-- end section-header -->
 
+
         <div class="row">
-            <div class="col-full">
-                <p class="lead">
-                    O objetivo principal de qualquer negócio é resolver um problema do mercado e obter lucro vendendo a solução. Empresas altamente lucrativas transformam este processo em um ciclo automatizado de vendas.
-                </p>
-                <p class="lead">
-                    Esta é a Missão da Formação HyperX Online, te ensinar quais são e como gerenciar de forma ágil as 4 etapas de um negócio lucrativo.
-                </p>
-                <!-- <p class="lead">
-                    Para fazer isso, você precisa estruturar seu negócio da forma correta, definindo e organizando as 4 Etapas de um Negócio de Sucesso.
-                </p> -->
-            </div>
-        </div> <!-- end about-desc -->
+                
+            <div class="about-process process block-1-2 block-tab-full">
+                <div class="process__vline-left"></div>
+                <div class="process__vline-right"></div>
 
-        <div class="row services-list block-1-2 block-m-1-2 block-tab-full">
+                <div class="col-block" style="margin-bottom: 40px;">
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
+                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <div class="testimonials__author">
+                            Everson Vargas
+                            <span>Engenheiro de Software e Empreendedor</span>
+                        </div>
+                    </div> 
+                </div>
+                <div class="col-block" style="margin-bottom: 40px;">
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
+                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <div class="testimonials__author">
+                            Everson Vargas
+                            <span>Engenheiro de Software e Empreendedor</span>
+                        </div>
+                    </div> 
+                </div>
 
-            <div class="col-block service-item ">
-                <div class="service-icon service-icon--brand-identity">
-                    <i class="icon-tv"></i>
+                <div class="col-block" style="margin-bottom: 40px;">
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
+                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <div class="testimonials__author">
+                            Everson Vargas
+                            <span>Engenheiro de Software e Empreendedor</span>
+                        </div>
+                    </div> 
                 </div>
-                <div class="service-text">
-                    <h3 class="h4">Descoberta de Clientes</h3>
-                    <p>O primeiro passo para qualquer negócio é saber quem é e onde está o seu cliente ideal. Através de uma ferramenta de gestão Ágil, você irá identificar e explorar os potenciais clientes para o seu negócio.
-                    </p>
+                <div class="col-block" style="margin-bottom: 40px;">
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
+                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <div class="testimonials__author">
+                            Everson Vargas
+                            <span>Engenheiro de Software e Empreendedor</span>
+                        </div>
+                    </div> 
                 </div>
-            </div>
-
-            <div class="col-block service-item">
-                <div class="service-icon  service-icon--illustration">
-                    <i class="icon-group"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Validação do Negócio</h3>
-                    <p>Após identificados os potenciais compradores, é hora de vender. Isso mesmo. A Venda é o objetivo principal de qualquer modelo de negócio lucrativo e é isso que iremos te ensinar a fazer desde o início. Vender e aumentar seu ROI.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-block service-item">
-                <div class="service-icon  service-icon--web-design">
-                    <i class="icon-earth"></i>
-                </div>  
-                <div class="service-text">
-                    <h3 class="h4">Geração de Demanda</h3>
-                    <p>
-                        Esta é a etapa que causa o MAIOR DESPERDÍCIO de tempo e dinheiro dos empreendedores menos experientes. Negócios que não estão tendo lucro, provavelmente começaram sua jornada por esta etapa e da forma errada. <b>Nós te ajudamos a corrigir este erro</b>.
-                    </p>
-                </div>
-            </div>
-
-            <div class="col-block service-item">
-                <div class="service-icon service-icon--product-strategy">
-                    <i class="icon-cube"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Otimização e Escala</h3>
-                    <p>
-                        Esta é a etapa final, onde você terá em mãos todas as ferramentas e processos validados para escalar o seu negócio de forma lucrativa e sustentável. 
-                    </p>
-                </div>
-            </div>
-
-        </div>
+            </div> <!-- end process -->
+        </div> <!-- end about-stats -->
     </section>
 
     <!-- about
