ajustando layout depoimentos

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         <div class="row">
                 
             <div class="about-process process block-1-2 block-tab-full">
-                <div class="process__vline-left"></div>
-                <div class="process__vline-right"></div>
+                <!-- <div class="process__vline-left"></div>
+                <div class="process__vline-right"></div> -->
 
                 <div class="col-block" style="margin-bottom: 40px;">
                     <div class="testimonials__slide">
@@ -520,41 +520,6 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="row" style="margin-top: 50px;">
-                <div class="col-eight tab-full contact-secondary">
-                    <div class="contact-subscribe">
-                        <form action="https://vwmidia.com.br" id="mc-form" class="group mc-form" novalidate="true">
-                            <input type="submit" name="subscribe" value="Quero me inscrever agora">
-                        </form>
-                    </div>
-                </div>
-            </div> end row         -->
-
-            <!-- <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon  service-icon--ui-design">
-                    <i class="icon-window"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">UI/UX Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
-            </div>
-    
-            <div class="col-block service-item" data-aos="fade-up">
-                <div class="service-icon service-icon--mobile-dev">
-                    <i class="icon-lego-block"></i>
-                </div>
-                <div class="service-text">
-                    <h3 class="h4">Mobile Development</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
-                    </p>
-                </div>
-            </div> -->
 
         </div> <!-- end services-list -->
 
@@ -622,7 +587,7 @@
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </form> -->
                     <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
-                        <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
+                        <input style="position: inherit !important; font-size: 1.5rem;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </a>
                 </div>
             </div>    
