verao online final com depiomentos

--- a/index.html
+++ b/index.html
@@ -121,47 +121,47 @@
                 <!-- <div class="process__vline-left"></div>
                 <div class="process__vline-right"></div> -->
 
-                <div class="col-block" style="margin-bottom: 40px;">
+                <div class="col-block" style="margin-bottom: 60px;">
                     <div class="testimonials__slide">
-                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
-                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <img src="images/avatars/profileAndre.png" alt="Author image" class="testimonials__avatar">
+                        <p>Quando minha esposa me convidou para fazer este treinamento, eu não dei credibilidade nenhuma. Eu já fiz muitos cursos de gestão, de vendas e outros diversos que agregaram nada ou muito pouco. Mas acabei fazendo a HyperX e me surpreendi muito positivamente. O Everson e a Scheron realmente mostram um modelo de negócio totalmente diferente que realmente fez eu acreditar que tem como fazer diferente e ter sucesso. Não é fácil, a gente tem que trabalhar bastante e eu acredito agora que com tudo o que aprendemos neste treinamento, dificilmente a gente não vai ter êxito aplicando tudo o que eles ensinam.</p>
                         <div class="testimonials__author">
-                            Everson Vargas
-                            <span>Engenheiro de Software e Empreendedor</span>
-                        </div>
-                    </div> 
-                </div>
-                <div class="col-block" style="margin-bottom: 40px;">
-                    <div class="testimonials__slide">
-                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
-                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
-                        <div class="testimonials__author">
-                            Everson Vargas
-                            <span>Engenheiro de Software e Empreendedor</span>
+                            André Willrich 
+                            <span>Soulmate Village - Cabana de Locação</span>
                         </div>
                     </div> 
                 </div>
 
-                <div class="col-block" style="margin-bottom: 40px;">
+                <div class="col-block" style="margin-bottom: 60px;">
                     <div class="testimonials__slide">
-                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
-                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <img src="images/avatars/profileAngela.png" alt="Author image" class="testimonials__avatar">
+                        <p>Este curso superou todas as minhas expectativas. Eu aprendi muito, muito conteúdo esclarecimento sobre gestão de um negócio. Foi além das minhas expectativas. Foi passado numa linguagem clara e eu vi que é possivel sim ter uma prosperidade colocando tudo em prática, então vale muito a pena. A Scheron e o Everson são feras, são muito humildes e eles tem sim o caminho para nos ensinar a atingir o sucesso e ter prosperidade. Então eu indico muito para todos os empreendedores que estão meio perdidos ou estagnados como eu estava.
+                        </p>
                         <div class="testimonials__author">
-                            Everson Vargas
-                            <span>Engenheiro de Software e Empreendedor</span>
+                            Dra. Angegla Feldkircher
+                            <span>Cirurgiã Dentista | CRORS 24309</span>
                         </div>
                     </div> 
                 </div>
-                <div class="col-block" style="margin-bottom: 40px;">
+                
+                <div class="col-block" style="margin-bottom: 60px;">
                     <div class="testimonials__slide">
-                        <img src="images/avatars/profileEverson.jpeg" alt="Author image" class="testimonials__avatar">
-                        <p>Especialista em Negócios Enxutos e Marketing Ágil. Com mais de 20 anos de experiência na área digital e de tecnologia, Everson já criou diversos negócios ao longo dos anos. Atualmente é fundador da Agência de Marketing VWMídia, da plataforma Spicy e do Evento Enjoy Beauty. Com a Formação HyperX, Everson quer compartilhar sua experiência com outros empreendedores que também desejam atingir o sucesso com seus negócios.</p>
+                        <img src="images/avatars/profileLiliane.png" alt="Author image" class="testimonials__avatar">
+                        <p>Este certificado significa muito pra mim. Foram dias bem intensos de muito conhecimento. Entrei no mundo dos negócios como uma aventureira e hoje entendo tudo praticamente de empreendedorismo, entendo por onde começar para ser realmente uma empreendedora de sucesso. Só tenho a agradecer a Scheron e o Everson porque eles entregaram tudo, todo o conhecimento deles, eles são extraordinários. Eu me surpreendi demais, estou com todas as minhas expectativas supridas. Agora é só colocar em prática fazer meu negócio se tornar um negócio de sucesso. Gratidão.</p>
                         <div class="testimonials__author">
-                            Everson Vargas
-                            <span>Engenheiro de Software e Empreendedor</span>
+                            Liliane Veppo
+                            <span>Representante de Vendas</span>
                         </div>
                     </div> 
                 </div>
+                <div class="col-block">
+                    <div class="testimonials__slide">
+                        <img src="images/avatars/profilePietra.jpg" alt="Author image" class="testimonials__avatar">
+                        <p>A Formação HyperX superou muito as minhas expectativas. Eu acompanho já o Everson e a Scheron há algum tempo nas redes sociais, já via o trabalho deles e estava bem ansiosa por fazer este treinamento. Estava com as expectativas altas e realmente o treinamento superou elas. Eles entregam todo o conhecimento que a gente precisa e dá pra ver que eles fazem isso com propósito, com vontade auxiliar e ajudar os outros empreendedores a terem sucesso também. Estou muito feliz e empolgada agora para colocar todo o conhecimento em prática e ter o retorno que agora eu sei que posso ter com o meu negócio.</p>
+                        <div class="testimonials__author">
+                            Pietra Rasch
+                            <span>Mãe, Empreendedora e Marketeira</span>
+                        </div>
             </div> <!-- end process -->
         </div> <!-- end about-stats -->
     </section>
