versao online final com depoimentos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <div class="row section-header">
             <div class="col-full">
-                <h3 class="subhead">Veja a transformação que causamos na nossa última turma?</h3>
+                <h3 class="subhead">Veja a transformação que causamos na nossa última turma</h3>
                 <h1 class="display-1">Não confie <u>apenas</u> nas minhas palavras.</br> Veja o que nossos alunos dizem.</h1>
             </div>
         </div> <!-- end section-header -->
