ajustando layout do preço

--- a/index.html
+++ b/index.html
@@ -574,8 +574,7 @@
                     <br>Pegaremos na SUA MÃO e te guiaremos até o sucesso nos negócios.</p>
 
                 <p class="contact-email">Se inscrevendo AGORA, você terá um <b>DESCONTO DE </br> R$ 2.700,00</b></p>
-                <p class="contact-email">DE <b style="text-decoration: line-through;">R$ 3.997,00</b> POR APENAS 12X de</p>
-                <p class="contact-email"><b>R$ 130,00</b></p>
+                <p class="contact-email">DE <b style="text-decoration: line-through;">R$ 3.997,00</b></br>POR APENAS 12X de </br><b>R$ 130,00</b></p>
                 <p style="margin-top: -30px;">OU R$ 1.297,00 à vista.</p>
                 <!-- <p style="margin-top: -30px;">* Pagamentos via PIX tem 10% de Desconto. Fale com a gente.</p> -->
             </div>
@@ -587,7 +586,7 @@
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </form> -->
                     <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
-                        <input style="position: inherit !important; font-size: 1.5rem;" type="submit" name="subscribe" value="Quero me inscrever agora">
+                        <input style="position: inherit !important; font-size: 1.5rem; padding-right: 25px;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </a>
                 </div>
             </div>    
