ajustando tamanho do botao de compra

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                         <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </form> -->
                     <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
-                        <input style="position: inherit !important; font-size: 1.5rem; padding-right: 25px;" type="submit" name="subscribe" value="Quero me inscrever agora">
+                        <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero me inscrever agora">
                     </a>
                 </div>
             </div>    
