quebrando objeção de garantia e reembolso

--- a/index.html
+++ b/index.html
@@ -580,13 +580,29 @@
             </div>
         </div> <!-- end section-header -->
         <div class="row" style="margin-bottom: 40px;">
-            <div class="col-five tab-full contact-secondary">
+            <div class="col-five tab-full">
                 <div class="contact-subscribe">
-                    <!-- <form action="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
-                        <input style="position: inherit !important;" type="submit" name="subscribe" value="Quero me inscrever agora">
-                    </form> -->
                     <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
-                        <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero me inscrever agora">
+                        <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero meu acesso agora">
+                    </a>
+                </div>
+            </div>    
+        </div>
+
+        <div class="row">
+            <div class="col-five tab-full contact-secondary">
+                <h3 class="subhead subhead--light">COMPRA COM GARANTIA</h3>
+                <h3 style="color: white;">VOCÊ POSSUI <u>14 DIAS</u> DE GARANTIA com Reembolso 100% Garantido!</h3>
+                Se por qualquer motivo você achar que o treinamento não atingiu suas expectativas, você poderá solicitar o reembolso do valor INTEGRAL pago por esta Formação.</br></br>
+                <span style="color: white;">Fazemos isso porque TEMOS CERTEZA que você irá se surpreender com esta Formação Empreendedora!</span>
+            </div>
+        </div>
+
+        <div class="row" style="margin-bottom: 40px;">
+            <div class="col-five tab-full">
+                <div class="contact-subscribe">
+                    <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
+                        <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero começar agora">
                     </a>
                 </div>
             </div>    
