fortalecendo promessa de garantia

--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@
         <div class="row" style="margin-bottom: 40px;">
             <div class="col-five tab-full">
                 <div class="contact-subscribe">
+                    <div style="line-height: 1.2; color: white;">* Você possui 14 dias de garantia com reembolso 100% garantido!</div>
                     <a target="_blank" href="https://pay.kiwify.com.br/58hnzfn" class="group mc-form">
                         <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero meu acesso agora">
                     </a>
@@ -605,7 +606,7 @@
                         <input style="position: inherit !important; font-size: 1.5rem; width: 340px;" type="submit" name="subscribe" value="Quero começar agora">
                     </a>
                 </div>
-            </div>    
+            </div>
         </div>
 
         <div class="row">
